Fixed vertical alignment of footer images

--- a/website/static/website/css/styles.css
+++ b/website/static/website/css/styles.css
@@ -384,9 +384,24 @@ body {
 	line-height: 75px;
 }
 
+.footer div {
+	position: relative;
+	height: 100%;
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
 .footer-img {
-	max-height: 60px;
-	vertical-align: middle;
+	max-height: 90%;  
+    max-width: 90%; 
+    width: auto;
+    height: auto;
+    position: absolute;  
+    top: 0;  
+    bottom: 0;  
+    left: 0;  
+    right: 0;  
+    margin: auto;
 }
 
 /* general styles */
